--- a/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
+++ b/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
@@ -14,7 +14,9 @@
     <!-- <script src="./108.js" defer></script> -->
     <!-- <script src="./109.js" defer></script> -->
     <!-- <script src="./110.js" defer></script> -->
-    <script src="./113.js" defer></script>
+    <!-- <script src="./111.js" defer></script> -->
+    <!-- <script src="./112.js" defer></script> -->
+    <!-- <script src="./113.js" defer></script> -->
     <!-- <script src="./114.js" defer></script> -->
     <!-- <script src="./115.js" defer></script> -->
     <!-- <script src="./116.js" defer></script> -->
