--- a/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
+++ b/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
@@ -21,9 +21,9 @@
     <!-- <script src="./115.js" defer></script> -->
     <!-- <script src="./116.js" defer></script> -->
     <!-- <script src="./117.js" defer></script> -->
-    <script src="./118.js" defer></script>
+    <!-- <script src="./118.js" defer></script> -->
     <!-- <script src="./119.js" defer></script> -->
-    <!-- <script src="./120.js" defer></script> -->
+    <script src="./120.js" defer></script>
     <!-- <script src="./121.js" defer></script> -->
     <!-- <script src="./127.js" defer></script> -->
     <!-- <script src="./129.js" defer></script> -->
@@ -43,7 +43,12 @@
         <h2 id="main-heading">
           Manage your tasks <span style="display: none">Hello</span>
         </h2>
-        <button class="btn btn-headline">Learn More</button>
+        <button
+          class="btn btn-headline"
+          onclick="console.log('You Clicked Me')"
+        >
+          Learn More
+        </button>
       </div>
     </header>
 
@@ -98,3 +103,15 @@
     </section>
   </body>
 </html>
+
+
+
+
+<!-- Linked this file to HTML -->
+<!-- second method of onClick Function is -->
+
+<!-- const btn=document.querySelector(".button");
+console.log(btn);
+btn.onClick=function(){
+  console.log("You Clicked Me !!!!")
+} -->
