--- a/javascript-beginning-to-mastery-main/part2/dom-tutorial/event-bubbling-capturing.html
+++ b/javascript-beginning-to-mastery-main/part2/dom-tutorial/event-bubbling-capturing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./evt-bcd.css" />
     <script src="./128.js" defer></script>
-    <title>Event Bubbling | Capturing | delegation</title>
+    <title>Event Bubbling/Event Propagation | Capturing | delegation</title>
   </head>
   <body>
     <main>
