--- a/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
+++ b/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
@@ -64,7 +64,7 @@
         <li>
           <span class="text">Do this do that</span>
           <div class="todo-buttons">
-            <button class="todo-btn done">Done</button>
+            <button class="todo-btn done" onclick="console.log('You Clicked Me')">Done</button>
             <button class="todo-btn remove">Remove</button>
           </div>
         </li>
