--- a/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
+++ b/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
@@ -20,7 +20,7 @@
     <!-- <script src="./114.js" defer></script> -->
     <!-- <script src="./115.js" defer></script> -->
     <!-- <script src="./116.js" defer></script> -->
-    <!-- <script src="./117.js" defer></script> -->
+    <script src="./117.js" defer></script>
     <!-- <script src="./118.js" defer></script> -->
     <!-- <script src="./119.js" defer></script> -->
     <!-- <script src="./120.js" defer></script> -->
