New Information adding

--- a/javascript-beginning-to-mastery-main/part2/how-javascript-works/index.html
+++ b/javascript-beginning-to-mastery-main/part2/how-javascript-works/index.html
@@ -9,7 +9,8 @@
 <body>
     
     <!-- <script src="./hjw_01.js"></script> -->
-    <script src="./hjw_02.js"></script>
+    <!-- <script src="./hjw_02.js"></script> -->
+    <script src="./100.js"></script>
     <!-- <script src="./hjw_03.js"></script> -->
     <!-- <script src="./100.js"></script> -->
 </body>
