--- a/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
+++ b/javascript-beginning-to-mastery-main/part2/dom-tutorial/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="./103.js" defer></script> -->
     <!-- <script src="./104.js" defer></script> -->
     <!-- <script src="./105.js" defer></script> -->
-    <!-- <script src="./106.js" defer></script> -->
+    <script src="./106.js" defer></script>
     <!-- <script src="./107.js" defer></script> -->
     <!-- <script src="./108.js" defer></script> -->
     <!-- <script src="./109.js" defer></script> -->
